# outlook-mcp-server

./: .env.example  README.md  SETUP.md  pyproject.toml  server.py  setup.py
