[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outlook-mcp-server"
version = "0.1.0"
description = "MCP server for Microsoft Outlook via Microsoft Graph API"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "msal>=1.28.0",
]

[project.scripts]
outlook-mcp-server = "server:main"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
